--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An project for intern system",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node src/index.ts"
   },
   "repository": {
     "type": "git",
