--- a/package.json
+++ b/package.json
@@ -24,11 +24,18 @@
     "@mikro-orm/core": "^5.6.16",
     "@mikro-orm/migrations": "^5.6.16",
     "@mikro-orm/postgresql": "^5.6.16",
+    "apollo-server-express": "^3.12.0",
+    "express": "^4.18.2",
+    "graphql": "15.3.0",
     "pg": "^8.10.0",
+    "reflect-metadata": "^0.1.13",
     "ts-node": "^10.9.1",
+    "tsconfig.json": "^1.0.11",
+    "type-graphql": "^1.1.1",
     "typescript": "^5.0.4"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/node": "^18.15.11"
   },
   "mikro-orm": {
