--- a/package.json
+++ b/package.json
@@ -20,14 +20,23 @@
   },
   "homepage": "https://github.com/saifrahmn/Reddit#readme",
   "dependencies": {
+    "@apollo/server-plugin-landing-page-graphql-playground": "^4.0.0",
     "@mikro-orm/cli": "^5.6.16",
     "@mikro-orm/core": "^5.6.16",
     "@mikro-orm/migrations": "^5.6.16",
     "@mikro-orm/postgresql": "^5.6.16",
+    "@types/connect-redis": "0.0.14",
+    "@types/express-session": "1.17.1",
     "apollo-server-express": "^3.12.0",
+    "argon2": "^0.30.3",
+    "ars": "^2.8.13",
+    "connect-redis": "^7.0.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "graphql": "15.3.0",
     "pg": "^8.10.0",
+    "redis": "^4.6.5",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.9.1",
     "tsconfig.json": "^1.0.11",
@@ -36,7 +45,9 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
-    "@types/node": "^18.15.11"
+    "@types/node": "^18.15.11",
+    "i": "^0.3.7",
+    "npm": "^9.6.5"
   },
   "mikro-orm": {
     "useTsNode": true,
