add the userresolver

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "watch": "tsc -w",
     "dev": "nodemon --exec ts-node src/index.ts",
-    "start": "ts-node src/index.ts"
+    "start": "ts-node src/index.ts",
+    "create-migration": "mikro-orm migration:create"
   },
   "keywords": [],
   "author": "",
@@ -22,7 +23,12 @@
     "@mikro-orm/core": "^5.7.5",
     "@mikro-orm/migrations": "^5.7.5",
     "@mikro-orm/postgresql": "^5.7.5",
-    "pg": "^8.10.0"
+    "apollo-server-express": "^3.12.0",
+    "argon2": "^0.30.3",
+    "express": "^4.18.2",
+    "graphql": "15.3.0",
+    "pg": "^8.10.0",
+    "type-graphql": "^1.1.1"
   },
   "mikro-orm": {
     "useTsNode": true,
